%% Modelo Lógico/Físico (tabelas reais do banco) - CapMar / PostgreSQL 16
erDiagram
    CATEGORY ||--o{ PROJECT            : "category_id"
    USERS    ||--o{ PROJECT            : "owner_id"
    PROJECT  ||--o{ TEAM               : "project_id"
    USERS    ||--o{ TEAM               : "leader_id"
    USERS    ||--o{ POST               : "user_id"
    PROJECT  ||--o{ POST               : "project_id"
    PROJECT  ||--o{ PROJECT_COMMENTS   : "project_id"
    USERS    ||--o{ PROJECT_COMMENTS   : "user_id"
    PROJECT  ||--o{ PROJECT_LIKES      : ""
    USERS    ||--o{ PROJECT_LIKES      : ""
    PROJECT  ||--o{ PROJECT_USERS      : ""
    USERS    ||--o{ PROJECT_USERS      : ""
    TEAM     ||--o{ TEAM_USERS         : ""
    USERS    ||--o{ TEAM_USERS         : ""
    PROJECT  ||--o{ PROJECTS_KEYWORDS  : ""
    KEYWORDS ||--o{ PROJECTS_KEYWORDS  : ""
    TEAM     ||--o{ TEAM_KEYWORDS      : ""
    KEYWORDS ||--o{ TEAM_KEYWORDS      : ""
    USERS    ||--o{ USER_KEYWORDS      : ""
    KEYWORDS ||--o{ USER_KEYWORDS      : ""

    CATEGORY {
        int  id PK
        text description
    }
    USERS {
        int     user_id PK
        varchar username UK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar user_password
        varchar avatar_url
    }
    KEYWORDS {
        int     keyword_id PK
        varchar word UK
        int     popularity
    }
    PROJECT {
        int     project_id PK
        varchar name
        text    description
        varchar template
        varchar status
        boolean visibility
        date    created_at
        int     category_id FK
        int     owner_id FK
        varchar cover_url
        varchar logo_url
    }
    TEAM {
        int     team_id PK
        varchar team_name
        text    purpose
        date    created_at
        int     project_id FK
        int     leader_id FK
    }
    POST {
        int     post_id PK
        text    content
        varchar image_url
        date    created_at
        int     user_id FK
        int     project_id FK
    }
    PROJECT_COMMENTS {
        int  comment_id PK
        text content
        date created_at
        int  project_id FK
        int  user_id FK
    }
    PROJECT_LIKES {
        int project_id PK,FK
        int user_id PK,FK
    }
    PROJECT_USERS {
        int project_id PK,FK
        int user_id PK,FK
    }
    TEAM_USERS {
        int team_id PK,FK
        int user_id PK,FK
    }
    PROJECTS_KEYWORDS {
        int project_id PK,FK
        int keyword_id PK,FK
    }
    TEAM_KEYWORDS {
        int team_id PK,FK
        int keyword_id PK,FK
    }
    USER_KEYWORDS {
        int user_id PK,FK
        int keyword_id PK,FK
    }
